k8s/reset-password.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-reset-password-deployment
  labels:
    app: web-reset-password
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-reset-password
  template:
    metadata:
      labels:
        app: web-reset-password
    spec:
      containers:
        - name: web-reset-password
          image: okteto.dev/web-reset-password
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
                limits:
                  memory: "3Gi"
                  cpu: "1000m"

---
apiVersion: v1
kind: Service
metadata:
  name: web-reset-password-service
spec:
  selector:
    app: web-reset-password
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
