k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-reset-password
  # https://www.okteto.com/docs/cloud/ssl
  annotations:
    dev.okteto.com/generate-host: web-reset-password
spec:
  rules:
    - host: "*"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-reset-password-service
                port:
                  number: 80
